# RoX

./: CMakeLists.txt  README.md  TODO.txt
Inc/DebugUI/: AnimationUI.h  AssetBatchUI.h  AssetUI.h  BoneUI.h  CameraUI.h  DebugUI.h  GeneralUI.h  IMeshUI.h  IdentifiableUI.h  LightingUI.h  MaterialUI.h  MathUI.h  MeshFactoryUI.h  ModelUI.h  OutlineUI.h  SceneUI.h  SpriteUI.h  SubmeshUI.h  TextUI.h  TimerUI.h  UpdateScheduler.h  Util.h
Inc/RoX/: Animation.h  Asset.h  AssetBatch.h  AssetIO.h  Camera.h  DXException.h  DebugUI.h  DirectionalLight.h  IAssetBatchObserver.h  ISceneObserver.h  IWindowObserver.h  Identifiable.h  Material.h  Mesh.h  MeshFactory.h  Model.h  Outline.h  Primitive.h  Renderer.h  Scene.h  Sprite.h  StaticGeometry.h  SubmeshFactory.h  Text.h  Texture.h  Timer.h  VertexTypes.h  Window.h
Shaders/: PixelShader.hlsl
Src/: Animation.cpp  Asset.cpp  AssetBatch.cpp  AssetIO.cpp  Camera.cpp  DebugDraw.cpp  DebugDraw.h  DebugUI.cpp  DeviceData.cpp  DeviceData.h  DeviceDataBuilder.cpp  DeviceDataBuilder.h  DeviceResourceData.cpp  DeviceResourceData.h  DeviceResources.cpp  DeviceResources.h  IDeviceNotify.h  IDeviceObserver.h  Material.cpp  Mesh.cpp  MeshDeviceData.cpp  MeshDeviceData.h  MeshFactory.cpp  Model.cpp  ModelDeviceData.cpp  ModelDeviceData.h  ModelLoadAssimp.cpp  ModelLoadAssimp.h  ObjectData.h  Outline.cpp  Renderer.cpp  Scene.cpp  Sprite.cpp  SpriteData.h  StaticGeometryData.h  SubmeshDeviceData.cpp  SubmeshDeviceData.h  SubmeshFactory.cpp  TextData.h  TextDeviceData.h  (+3 more)
Src/DebugUI/: AnimationUI.cpp  AssetBatchUI.cpp  AssetUI.cpp  BoneUI.cpp  CameraUI.cpp  DebugUI.cpp  GeneralUI.cpp  IMeshUI.cpp  IdentifiableUI.cpp  LightingUI.cpp  MaterialUI.cpp  MathUI.cpp  MeshFactoryUI.cpp  ModelUI.cpp  OutlineUI.cpp  SceneUI.cpp  SpriteUI.cpp  SubmeshUI.cpp  TextUI.cpp  TimerUI.cpp  UpdateScheduler.cpp  Util.cpp
Src/DeviceHandlers/: DeviceDataBatch.cpp  DeviceDataBatch.h  DeviceResourceData.cpp  DeviceResourceData.h  DeviceResources.cpp  DeviceResources.h  IDeviceDataSupplier.h  MaterialDeviceData.cpp  MaterialDeviceData.h  MeshDeviceData.cpp  MeshDeviceData.h  ModelDeviceData.cpp  ModelDeviceData.h  SubmeshDeviceData.cpp  SubmeshDeviceData.h  TextDeviceData.cpp  TextDeviceData.h  TextureDeviceData.cpp  TextureDeviceData.h
Src/Exceptions/: DXException.cpp  ThrowIfFailed.h
Src/FileFormats/: RoXAnim.h  RoXModl.h
Src/RoX/: Animation.cpp  AssetBatch.cpp  AssetIO.cpp  Camera.cpp  DirectionalLight.cpp  Identifiable.cpp  Material.cpp  MeshFactory.cpp  Model.cpp  Outline.cpp  Renderer.cpp  Scene.cpp  Sprite.cpp  Timer.cpp  Window.cpp
Src/Util/: DebugPrint.h  Logger.h  dxtk12pch.h  pch.h
Tests/: CMakeLists.txt
Tests/Src/: AssetBatchTest.cpp  IntegrationTest.cpp  MeshTest.cpp  MockAssetBatchObserver.h  MockMeshObserver.h  MockModelObserver.h  ModelTest.cpp  RendererTest.cpp
Tests/Src/Mocks/: MockAssetBatchObserver.h
Tests/Src/PredefinedObjects/: ValidAnimation.cpp  ValidAnimation.h  ValidAssetBatch.cpp  ValidAssetBatch.h  ValidMaterial.cpp  ValidMaterial.h  ValidMesh.cpp  ValidMesh.h  ValidModel.cpp  ValidModel.h
Tests/Src/UnitTests/: AssetBatchTest.cpp  AssetIOTest.cpp  MeshTest.cpp  ModelTest.cpp
